--- a/app/views/lista/rotas-voo.ejs
+++ b/app/views/lista/rotas-voo.ejs
@@ -11,10 +11,10 @@
     <h1>Rotas de voo</h1>
 
     <h2>Filtros</h2>
-    
-<input type="radio" id="com_reservas" name="reservas" value="">
+     
+<input type="radio" id="com_reservas" name="reservas" value="1">
 <label for="com_reservas">Somente com reservas</label><br>
-<input type="radio" id="sem_reservas" name="reservas" value="">
+<input type="radio" id="sem_reservas" name="reservas"  value="0">
 <label for="sem_reservas">Sem reservas</label><br><br><br>
 
 <input type="text" name="busca" id="busca" required>
@@ -135,6 +135,123 @@
                 });
             }
         });
+
+
+        $('#com_reservas').click(function(){
+            $.ajax({
+                url: '/rotas/filtro',
+                method: 'GET',
+                data: {temReserva: this.value},
+                success: response => {
+                    const rotas = response;
+                      
+                        $('tr').remove(".resultado-rotas");
+
+                        const table = document.getElementById('table-rotas');
+
+                        rotas.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-rotas";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.NR_ROTA_VOO;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.CD_ARPT_ORIG;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.CD_ARPT_DEST;
+
+                            var td4 = document.createElement('td');
+                            element.VR_PASG == undefined ? td4.innerHTML = '' : td4.innerHTML = element.VR_PASG ;
+
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/rotas/editar/' + element.NR_VOO;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+                            tr.appendChild(td4);
+
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                },
+            });
+        });
+
+        $('#sem_reservas').click(function(){
+            $.ajax({
+                url: '/rotas/filtro',
+                method: 'GET',
+                data: {temReserva: this.value},
+                success: response => {
+                    const rotas = response;
+                      
+                        $('tr').remove(".resultado-rotas");
+
+                        const table = document.getElementById('table-rotas');
+
+                        rotas.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-rotas";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.NR_ROTA_VOO;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.CD_ARPT_ORIG;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.CD_ARPT_DEST;
+
+                            var td4 = document.createElement('td');
+                            element.VR_PASG == undefined ? td4.innerHTML = '' : td4.innerHTML = element.VR_PASG ;
+
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/rotas/editar/' + element.NR_VOO;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+                            tr.appendChild(td4);
+
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                },
+            });
+        });
+        
+        
 
  
         
