--- a/app/views/lista/aeronaves.ejs
+++ b/app/views/lista/aeronaves.ejs
@@ -12,13 +12,15 @@
 
     <h2>Filtros</h2>
     <h3>Companhias aéreas</h3>
-    <label for="nome">Nome:</label>
+    <label for="nome">Código:</label>
 
-        <select name="nome" id="nome">
-                <option value="nenhum">Nenhum</option>
-                
+    <select name="companhia" id="companhia">
+        <option value="">Nenhum</option>
+        <% for(var i=0;i< companhias.length;i++){ %>
+            <option value="<%= companhias[i].CD_CMPN_AEREA %>"><%= companhias[i].CD_CMPN_AEREA %></option>
+        <% } %>
 
-            </select>
+    </select>
     </br></br>
 
     <input type="text" name="busca" id="busca" required>
@@ -74,6 +76,8 @@
         
         
         $('#send-busca').click(function(){
+
+            const companhia = $('#companhia').val();
            
             const busca = $('#busca').val();
 
@@ -81,7 +85,7 @@
                 $.ajax({
                     url: '/aeronaves/busca' ,
                     method: 'GET',
-                    data: {busca: busca},
+                    data: {busca: busca, filtro: companhia },
                     success: response =>{
                         //console.log(response);
 
@@ -137,7 +141,71 @@
         });
 
     
+        $('#companhia').change(function(){
             
+            const companhia = $('#companhia').val();
+            
+            const busca = $('#busca').val();
+
+            $.ajax({
+                url: '/aeronaves/filtro/' + companhia,
+                method: 'GET',
+                data: {
+                    busca: busca,
+                },
+                success: response =>{
+                        //console.log(response);
+
+                        const aeronaves = response;
+                             
+                        $('tr').remove(".resultado-aeronaves");
+
+                        const table = document.getElementById('table-aeronaves');
+
+                        aeronaves.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-aeronaves";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.CD_ARNV;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.CD_EQPT;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.CD_CMPN_AEREA;
+
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/aeronaves/editar/' + element.CD_ARNV;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                        
+                        
+                        
+                    },
+                
+            });
+        })
 
         
 
