--- a/app/views/lista/passageiros.ejs
+++ b/app/views/lista/passageiros.ejs
@@ -165,12 +165,174 @@
 
         
 
-        $('#solteiro').click(function(){
+        $('#solteiro').change(function(){
             
+            const casado = $('#casado').val();
+
+            const solteiro = $('#solteiro').val();
+            
+            const busca = $('#busca').val();
+
             $.ajax({
-                url: '/passageiros/filtro'
-            })
-        });
+                url: '/passageiros/filtro/',
+                method: 'GET',
+                data: {
+                    busca: busca,
+                    solteiro: solteiro,
+                    casado:casado
+                },
+                success: response =>{
+                        //console.log(response);
+
+                        const passageiros = response;
+                           
+                        $('tr').remove(".resultado-passageiros");
+
+                        const table = document.getElementById('table-passageiros');
+
+                        passageiros.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-passageiros";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.CD_PSGR;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.NM_PSGR;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.IC_SEXO_PSGR;
+
+                            var td4 = document.createElement('td');
+                            td4.innerHTML = element.DT_NASC_PSGR ;
+
+                            var td5 = document.createElement('td');
+                            td5.innerHTML = element.IC_ESTD_CIVIL ;
+
+                            var td6 = document.createElement('td');
+                            element.IC_CD_PSGR_RESP == undefined ? td6.innerHTML = '' : td6.innerHTML = element.IC_CD_PSGR_RESP ;
+
+                            var td7 = document.createElement('td');
+                            td7.innerHTML = element.CD_PAIS ;
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/passageiros/editar/' + element.CD_PSGR;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+                            tr.appendChild(td4);
+                            tr.appendChild(td5);
+                            tr.appendChild(td6);
+                            tr.appendChild(td7);
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                        
+                        
+                        
+                    },
+                
+            });
+        })
+        $('#casado').change(function(){
+            
+            const casado = $('#casado').val();
+
+            const solteiro = $('#solteiro').val();
+            
+            const busca = $('#busca').val();
+
+            $.ajax({
+                url: '/passageiros/filtro/',
+                method: 'GET',
+                data: {
+                    busca: busca,
+                    solteiro: solteiro,
+                    casado:casado
+                },
+                success: response =>{
+                        //console.log(response);
+
+                        const passageiros = response;
+                           
+                        $('tr').remove(".resultado-passageiros");
+
+                        const table = document.getElementById('table-passageiros');
+
+                        passageiros.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-passageiros";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.CD_PSGR;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.NM_PSGR;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.IC_SEXO_PSGR;
+
+                            var td4 = document.createElement('td');
+                            td4.innerHTML = element.DT_NASC_PSGR ;
+
+                            var td5 = document.createElement('td');
+                            td5.innerHTML = element.IC_ESTD_CIVIL ;
+
+                            var td6 = document.createElement('td');
+                            element.IC_CD_PSGR_RESP == undefined ? td6.innerHTML = '' : td6.innerHTML = element.IC_CD_PSGR_RESP ;
+
+                            var td7 = document.createElement('td');
+                            td7.innerHTML = element.CD_PAIS ;
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/passageiros/editar/' + element.CD_PSGR;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+                            tr.appendChild(td4);
+                            tr.appendChild(td5);
+                            tr.appendChild(td6);
+                            tr.appendChild(td7);
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                        
+                        
+                        
+                    },
+                
+            });
+        })
+
+
 
             
 
